# UH6340P2

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Project 2.sln  Project 2.vcxproj  Project 2.vcxproj.filters  README.md  main.cpp  out.txt  project2  studentRecord.hpp  test2.txt  tree.hpp
Tree/: internalNode.hpp  leafNode.hpp  node.hpp  tree.hpp
Tree/Node/: internalNode.hpp  leafNode.hpp  node.hpp
